@@ -57,6 +57,7 @@ public:
     Attribute_<bool> urgent_;
     Attribute_<bool> floating_;
     Attribute_<bool> fullscreen_;
+    Attribute_<bool> minimized_;
     Attribute_<std::string> title_;  // or also called window title; this is never NULL
     DynAttribute_<std::string> tag_str_;
     Attribute_<std::string> window_id_str;
