@@ -221,6 +221,9 @@ bool floating_focus_direction(Direction dir) {
     int curfocusidx = -1;
     Client* curfocus = get_current_client();
     tag->foreachClient([&](Client* c) {
+        if (c->visible_()) {
+            return;
+        }
         clients.push_back(c);
         rects.push_back(make_pair(idx,c->dec->last_outer()));
         if (c == curfocus) {
@@ -251,6 +254,9 @@ Point2D find_rectangle_collision_on_tag(HSTag* tag, Client* curfocus, Direction 
     int idx = 0;
     int curfocusidx = -1;
     tag->foreachClient([&](Client* c) {
+        if (c->visible_()) {
+            return;
+        }
         clients.push_back(c);
         if (c == curfocus) {
             rects.push_back(make_pair(idx,focusrect));
